samples/_failures_safe/1761309859_2930aa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c8630e9d.c: In function ‘main’:
./samples/SAFE/__tmp_c8630e9d.c:150:17: error: expected declaration or statement at end of input
  150 |                 } else if (status == -1) {
      |                 ^
./samples/SAFE/__tmp_c8630e9d.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c8630e9d.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c8630e9d.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c8630e9d.c:150:17: error: expected declaration or statement at end of input
